welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: not found: value ecritmessage
	while(!estFaceMur()){ avance(); x=x+1; ecritmessage() 
                                               ^